Import of PMAKHOLM/Encode-IMAPUTF7-1.00_01 from CPAN.
gitpan-cpan-distribution: Encode-IMAPUTF7
gitpan-cpan-version:      1.00_01
gitpan-cpan-path:         PMAKHOLM/Encode-IMAPUTF7-1.00_01.tar.gz
gitpan-cpan-author:       PMAKHOLM
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Encode::IMAPUTF7.
 
+1.00_01 2009-02-16
+    Silence warnings from decode() (rt: #36180)
+    Make it work with perl 5.10 (rt: #40827)
+
 1.00  Wed Sep 28 2005
       original version
 
