--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Encode::IMAPUTF7.
 
+1.02    2009-04-20
+    Code tidying
+    Make encoding more compliant to the RFC (rt: #45050)
+    - thanks to Nick Czeczulin
+
+1.01    2009-02-17
+    Release as non-developers release
+
 1.00_01 2009-02-16
     Silence warnings from decode() (rt: #36180)
     Make it work with perl 5.10 (rt: #40827)
